[workspace]
members  = [
    "contracts/orbital-core",
    "local-interchaintest",
    "unit-tests/",
]
resolver = "2"

[workspace.package]
edition     = "2021"
version     = "0.1.0"
license     = "Apache-2.0"
repository  = "https://github.com/timewave-computer/orbital"

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
panic            = 'abort'
incremental      = false
overflow-checks  = true

[workspace.dependencies]
cosmwasm-std    = { version = "2.1.3", features = [
    "cosmwasm_1_1",
    "cosmwasm_1_2",
    "cosmwasm_1_4",
    "cosmwasm_2_0",
] }
cosmwasm-schema = "2.1.3"
cw-utils        = "2.0.0"
cw-storage-plus = "2.0.0"
cw2             = "2.0.0"
schemars        = "0.8.16"
serde           = { version = "1.0.207", default-features = false, features = ["derive"] }
serde_json      = "1.0.125"
thiserror       = "1.0.63"
cw-ownable      = "2.0.0"
neutron-sdk     = "0.11.0"
anyhow          = "1.0.86"
cw-multi-test   = "2.1.1"
orbital-core    = { path = "contracts/orbital-core" }

hex             = "0.4.3"
localic-std     = { git = "https://github.com/strangelove-ventures/interchaintest", branch = "main" }
localic-utils   = { git = "https://github.com/timewave-computer/localic-utils", branch = "main" }
env_logger      = "0.11.5"
log             = "0.4.22"
unit-tests      = { path = "unit-tests" }
prost           = "0.11"
cosmos-sdk-proto = { version = "0.14.0", default-features = false }
