[workspace]
members  = [
    "contracts/orbital-core",
    "local-interchaintest",
    "unit-tests/",
]
resolver = "2"

[workspace.package]
edition     = "2021"
version     = "0.1.0"
license     = "Apache-2.0"
repository  = "https://github.com/timewave-computer/orbital"

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
panic            = 'abort'
incremental      = false
overflow-checks  = true

[workspace.dependencies]
cosmwasm-std        = { version = "2.1.3", features = [
    "cosmwasm_1_1",
    "cosmwasm_1_2",
    "cosmwasm_1_4",
] }
cosmwasm-schema     = "2.1.3"
cw-utils            = "2.0.0"
cw-storage-plus     = "2.0.0"
cw2                 = "2.0.0"
schemars            = "0.8.16"
serde               = { version = "1.0.207", default-features = false, features = ["derive"] }
serde_json          = "1.0.125"
thiserror           = "1.0.63"
cw-ownable          = "2.0.0"
neutron-sdk         = "0.11.0"
anyhow              = "1.0.86"
cw-multi-test       = { version = "2.1.1", features = [ "stargate", "cosmwasm_1_1", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4" ] }
orbital-core        = { path = "contracts/orbital-core" }
serde-json-wasm     = "1.0.0"
hex                 = "0.4.3"
localic-std         = { git = "https://github.com/strangelove-ventures/interchaintest", branch = "main" }
localic-utils       = { git = "https://github.com/timewave-computer/localic-utils", branch = "main" }
env_logger          = "0.11.5"
log                 = "0.4.22"
unit-tests          = { path = "unit-tests" }
prost               = { version = "0.12.3", default-features = false }
protobuf            = { version = "3.2.0", features = ["with-bytes"] }
prost-types         = { version = "0.12.3", default-features = false }
cosmos-sdk-proto    = { version = "0.20.0", default-features = false }
