[package]
name        = "local-interchaintest"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }

[dependencies]
localic-std     = { workspace = true }
localic-utils   = { workspace = true }
hex             = { workspace = true }
serde_json      = { workspace = true }
env_logger      = { workspace = true }
log             = { workspace = true }
orbital-core    = { workspace = true }
cosmwasm-std    = { workspace = true }
