[package]
name    = "auction"
version = "0.1.0"
authors = ["Art3miX"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std    = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }

schemars      = { workspace = true }
serde         = { workspace = true }
thiserror     = { workspace = true }
sha2          = { workspace = true }
orbital-utils = { workspace = true }
cw-fifo      = { git = "https://github.com/timewave-computer/covenants.git", branch = "main", package = "cw-fifo"}

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow        = { workspace = true }
