[package]
name        = "orbital-core"
authors     = ["Timewave Labs"]
description = "orbital core contract"
license     = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }
edition     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cw-ownable      = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
neutron-sdk     = { workspace = true }
schemars        = { workspace = true }
serde_json      = { workspace = true }

[dev-dependencies]
cw-multi-test   = { workspace = true }
